[tool.poetry]
name = "stream-notifier"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
loguru = "^0.6.0"
tweepy = "^4.10.1"
discord-webhook = "^0.17.0"
google-api-python-client = "^2.58.0"
python-dateutil = "^2.8.2"
google-auth-oauthlib = "^0.5.2"
PyYAML = "^6.0"
feedparser = "^6.0.10"
aiohttp = "^3.8.3"
pydantic = "<2.4"
addict = "^2.4.0"
pydantic-extra-types = "^2.1.0"
aiogram = "^3.1.1"


[tool.poetry.group.dev.dependencies]
bump-pydantic = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
